--- a/api/package.json
+++ b/api/package.json
@@ -3,12 +3,13 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-      "start": "node ./bin/www"
+        "start": "node ./bin/www"
     },
     "dependencies": {
-      "express": "~4.13.1",
-      "pg": "8.2.1",
-      "node-uuid": "1.4.7"
+        "express": "~4.13.1",
+        "mysql": "^2.18.1",
+        "mysql2": "^3.10.2",
+        "node-uuid": "1.4.7",
+        "pg": "8.2.1"
     }
-  }
-  
+}
