--- a/modified-k8s/backup.yaml
+++ b/modified-k8s/backup.yaml
@@ -3,7 +3,7 @@ kind: CronJob
 metadata:
   name: mysql-backup
 spec:
-  schedule: "* 3 * * *"
+  schedule: "0 3 * * *"
   jobTemplate:
     spec:
       template:
